syntax = "proto3";

package literaryPackage;

service AuthorService {
  rpc createAuthor (Author) returns (Author) {};
  rpc getAuthors (noParameter) returns (Authors) {};
  rpc getAuthor (AuthorName) returns (Author) {};
  rpc updateAuthor (UpdateAuthor) returns (Author) {};
  rpc deleteAuthor (AuthorName) returns (Author) {};
  rpc getAuthorsBooks (noParameter) returns (AuthorsBooks) {};
}

service BookService {
  rpc createBook (Book) returns (Book) {};
  rpc getBooks (noParameter) returns (Books) {};
  rpc getBook (BookTitle) returns (Book) {};
  rpc updateBook (UpdateBook) returns (Book) {};
  rpc deleteBook (BookTitle) returns (Book) {};
}

service AwardService {
  rpc createAward (Award) returns (Award) {};
  rpc getAwards (noParameter) returns (Awards) {};
  rpc getAward (AwardName) returns (Award) {};
  rpc updateAward (UpdateAward) returns (Award) {};
  rpc deleteAward (AwardName) returns (Award) {};
}

message noParameter {};

message Author {
  string name = 1;
}

message Authors {
  repeated Author authors = 1;
}

message AuthorName {
  string name = 1;
}

message UpdateAuthor {
  string name = 1;
  string updatedName = 2;
}

message Book {
  string title = 1;
  int32 author = 2;
  string isbn = 3;
  string format = 4;
  int32 pages = 5;
}

message Books {
  repeated Book books = 1;
}

message BookTitle {
  string title = 1;
}

message UpdateBook {
  string title = 1;
  string updatedTitle = 2;
  int32 author = 3;
  int32 updatedAuthor = 4;
  string isbn = 5;
  string updatedIsbn= 6;
  string format = 7;
  string updatedBookFormat = 8;
  int32 pages = 9;
  int32 updatedPages = 10;
}

message Award {
  string award = 1;
  int32 author = 2;
  int32 book = 3;
  int32 year = 4;
}

message Awards {
  repeated Award awards = 1;
}

message AwardName {
  string award = 1;
  int32 year = 2;
}

message UpdateAward {
  string award = 1;
  string updatedAward = 2;
  int32 author = 3;
  int32 updatedAuthor = 4;
  int32 book = 5;
  int32 updatedBook= 6;
  int32 year = 7;
  int32 updatedYear = 8;
}

message AuthorsBooksMessage {
  string name = 1;
  string title = 2;
}

message AuthorsBooks {
  repeated AuthorsBooksMessage result = 1;
}